inclusão de algoritmo de máquinas paralelas

--- a/Aula 2 - Algoritmos construtivos.ipynb
+++ b/Aula 2 - Algoritmos construtivos.ipynb
@@ -250,6 +250,86 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Minimizar _makespan_ em máquinas paralelas\n",
+    "\n",
+    "Podemos usar o algoritmo abaixo:\n",
+    "\n",
+    "### Entrada\n",
+    "- Uma lista de tarefas, onde cada tarefa tem um tempo de processamento.\n",
+    "- O número de máquinas \\( m \\).\n",
+    "\n",
+    "### Passos\n",
+    "\n",
+    "1. **Ordenar as Tarefas em Ordem Decrescente de Tempo de Processamento**\n",
+    "\n",
+    "2. **Distribuir Tarefas**\n",
+    "   - Para cada tarefa, aloque-a à máquina com o menor tempo de processamento atual.\n",
+    "\n",
+    "3. **Retornar a Alocação de Tarefas e o Makespan**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Incluindo em 0\n",
+      "Incluindo em 1\n",
+      "Incluindo em 2\n",
+      "Incluindo em 2\n",
+      "Incluindo em 1\n",
+      "Máquina 0: Makespan=50.0 [2]\n",
+      "Máquina 1: Makespan=37.0 [4, 1]\n",
+      "Máquina 2: Makespan=35.0 [3, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Tarefa:\n",
+    "    def __init__(self, id = -1, tempo_processamento = 0.0) -> None:\n",
+    "        self.id = id                                    # Id da tarefa\n",
+    "        self.tempo_processamento = tempo_processamento  # Tempo de processamento da tarefa\n",
+    "\n",
+    "lista_original = [\n",
+    "    Tarefa(0, 10),\n",
+    "    Tarefa(1, 2),\n",
+    "    Tarefa(2, 50),\n",
+    "    Tarefa(3, 25),\n",
+    "    Tarefa(4, 35)\n",
+    "]\n",
+    "\n",
+    "n_maquinas = 3\n",
+    "\n",
+    "alocacao_maquinas = []\n",
+    "makespan_maquinas = []\n",
+    "for i in range(n_maquinas):\n",
+    "    alocacao_maquinas.append([])\n",
+    "    makespan_maquinas.append(0.0)\n",
+    "\n",
+    "# Início do algoritmo\n",
+    "lista_ordenada = sorted(lista_original, key=lambda x:x.tempo_processamento, reverse=True) #LPT\n",
+    "\n",
+    "for t in lista_ordenada:\n",
+    "    menor_makespan = min(\n",
+    "        enumerate(makespan_maquinas),\n",
+    "        key=lambda x:x[1]\n",
+    "    )\n",
+    "    print(f\"Incluindo em {menor_makespan[0]}\")\n",
+    "    alocacao_maquinas[menor_makespan[0]].append(t)\n",
+    "    makespan_maquinas[menor_makespan[0]] += t.tempo_processamento\n",
+    "\n",
+    "for i in enumerate(alocacao_maquinas):\n",
+    "    print(f\"Máquina {i[0]}: Makespan={makespan_maquinas[i[0]]}\",[x.id for x in i[1]]) #essa mágica aqui é explicada na sequência"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "### Parênteses: _List Comprehension_\n",
     "(mais info em https://www.w3schools.com/Python/python_lists_comprehension.asp )\n",
