pequena correção de texto

--- a/Aula 2 - Algoritmos construtivos.ipynb
+++ b/Aula 2 - Algoritmos construtivos.ipynb
@@ -396,7 +396,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Regra de Johnson (F2/prmu/M)\n",
+    "## Regra de Johnson (F2//M)\n",
     "\n",
     "\n",
     "### Passos do algoritmo\n",
