Atualização da aula 4

--- a/Aula 4 - Docplex.ipynb
+++ b/Aula 4 - Docplex.ipynb
@@ -4,6 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Instalação da versão community (**não é a versão educacional**)\n",
+    "\n",
+    "- $ python3 -m venv venv #Cria um ambiente virtual\n",
+    "- $ source ./venv/bin/activate #Ativa o ambiente virtual\n",
+    "- $ python3 -m pip install docplex #Instala o docplex\n",
+    "- $ python3 -m pip install cplex #Instala o cplex"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Exemplo 1 - Modelando uma mochila em DocPlex\n",
     "\n",
     "Seja o seguinte modelo:\n",
@@ -24,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +82,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para a **criação de variáveis**, o Docplex disponibiliza um conjunto de métodos. \n",
+    "Para a **criação de variáveis**, o Docplex disponibiliza um conjunto de métodos:\n",
+    "\n",
+    "- binary_var()\tSingle binary variable\n",
+    "- binary_var_list()\tList of binary variables\n",
+    "- binary_var_dict()\tDictionary of binary variables\n",
+    "- binary_var_matrix()\tMatrix of binary variables\n",
+    "- integer_var()\tSingle integer variable\n",
+    "- integer_var_list()\tList of integer variables\n",
+    "- integer_var_dict()\tDictionary of integer variables\n",
+    "- integer_var_matrix()\tMatrix of integer variables\n",
+    "- continuous_var()\tSingle continuous variable\n",
+    "- continuous_var_list()\tList of continuous variables\n",
+    "- continuous_var_dict()\tDictionary of continuous variables\n",
+    "- continuous_var_matrix()\tMatrix of continuous variables\n",
     "\n",
     "Links úteis:\n",
     "* https://ibmdecisionoptimization.github.io/docplex-doc/mp/creating_model.html\n",
@@ -79,20 +104,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "docplex.mp.LinearConstraint[](x_0+x_1+x_2+10x_3+5x_4+5x_5,LE,20)"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Definição de restrições\n",
     "\n",
@@ -114,82 +128,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Version identifier: 22.1.1.0 | 2022-11-28 | 9160aff4d\n",
-      "CPXPARAM_Read_DataCheck                          1\n",
-      "1 of 2 MIP starts provided solutions.\n",
-      "MIP start 'm2' defined initial solution with objective 0.0000.\n",
-      "Retaining values of one MIP start for possible repair.\n",
-      "Tried aggregator 1 time.\n",
-      "MIP Presolve eliminated 3 rows and 2 columns.\n",
-      "MIP Presolve added 1 rows and 1 columns.\n",
-      "MIP Presolve modified 6 coefficients.\n",
-      "Reduced MIP has 2 rows, 6 columns, and 9 nonzeros.\n",
-      "Reduced MIP has 4 binaries, 2 generals, 0 SOSs, and 0 indicators.\n",
-      "Presolve time = 0.01 sec. (0.01 ticks)\n",
-      "Probing time = 0.00 sec. (0.00 ticks)\n",
-      "Tried aggregator 1 time.\n",
-      "MIP Presolve added 1 rows and 1 columns.\n",
-      "Reduced MIP has 3 rows, 7 columns, and 12 nonzeros.\n",
-      "Reduced MIP has 4 binaries, 3 generals, 0 SOSs, and 0 indicators.\n",
-      "Presolve time = 0.00 sec. (0.01 ticks)\n",
-      "Probing time = 0.00 sec. (0.00 ticks)\n",
-      "MIP emphasis: balance optimality and feasibility.\n",
-      "MIP search method: dynamic search.\n",
-      "Parallel mode: deterministic, using up to 16 threads.\n",
-      "Root relaxation solution time = 0.00 sec. (0.00 ticks)\n",
-      "\n",
-      "        Nodes                                         Cuts/\n",
-      "   Node  Left     Objective  IInf  Best Integer    Best Bound    ItCnt     Gap\n",
-      "\n",
-      "*     0+    0                            0.0000       56.0000              --- \n",
-      "*     0+    0                           46.0000       56.0000            21.74%\n",
-      "      0     0       48.3333     1       46.0000       48.3333        1    5.07%\n",
-      "      0     0        cutoff             46.0000                      1     --- \n",
-      "Elapsed time = 0.14 sec. (0.05 ticks, tree = 0.01 MB, solutions = 2)\n",
-      "\n",
-      "Root node processing (before b&c):\n",
-      "  Real time             =    0.15 sec. (0.05 ticks)\n",
-      "Parallel b&c, 16 threads:\n",
-      "  Real time             =    0.00 sec. (0.00 ticks)\n",
-      "  Sync time (average)   =    0.00 sec.\n",
-      "  Wait time (average)   =    0.00 sec.\n",
-      "                          ------------\n",
-      "Total (root+branch&cut) =    0.15 sec. (0.05 ticks)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "solucao = model.solve()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "z =  46.0\n",
-      "x0=1.0\n",
-      "x1=1.0\n",
-      "x2=1.0\n",
-      "x3=1.0\n",
-      "x4=1.0\n",
-      "x5=0\n",
-      "Solution status:\n",
-      "101 integer optimal solution\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"z = \",z.solution_value)\n",
     "for i in range(len(ci)):\n",
@@ -205,10 +155,10 @@
    "source": [
     "Material relevante:\n",
     "\n",
-    "*Classe **solution**\n",
+    "* Classe **solution**\n",
     "https://ibmdecisionoptimization.github.io/docplex-doc/mp/docplex.mp.solution.html\n",
     "\n",
-    "*Classe **SolveDetails**\n",
+    "* Classe **SolveDetails**\n",
     "https://ibmdecisionoptimization.github.io/docplex-doc/mp/docplex.mp.sdetails.html#docplex.mp.sdetails.SolveDetails\n"
    ]
   },
@@ -222,14 +172,14 @@
     "\n",
     "$I_0 = 0$\n",
     "\n",
-    "$I_t = I_{(t-1)} + x_t - d_t$\n",
+    "$I_t = I_{(t-1)} + x_t - d_t ~~~ \\forall t > 0$\n",
     "\n",
     "$M \\cdot y_t \\geq x_t ~~~\\forall t$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,20 +192,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Criação do modelo\n",
     "\n",
@@ -301,90 +240,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Version identifier: 22.1.1.0 | 2022-11-28 | 9160aff4d\n",
-      "CPXPARAM_Read_DataCheck                          1\n",
-      "Found incumbent of value 1500.000000 after 0.00 sec. (0.00 ticks)\n",
-      "Tried aggregator 2 times.\n",
-      "MIP Presolve eliminated 3 rows and 6 columns.\n",
-      "MIP Presolve added 2 rows and 0 columns.\n",
-      "Aggregator did 2 substitutions.\n",
-      "Reduced MIP has 12 rows, 17 columns, and 30 nonzeros.\n",
-      "Reduced MIP has 6 binaries, 0 generals, 0 SOSs, and 0 indicators.\n",
-      "Presolve time = 0.00 sec. (0.03 ticks)\n",
-      "Probing fixed 0 vars, tightened 4 bounds.\n",
-      "Probing time = 0.00 sec. (0.01 ticks)\n",
-      "Tried aggregator 1 time.\n",
-      "Detecting symmetries...\n",
-      "MIP Presolve modified 6 coefficients.\n",
-      "Reduced MIP has 12 rows, 17 columns, and 30 nonzeros.\n",
-      "Reduced MIP has 6 binaries, 0 generals, 0 SOSs, and 0 indicators.\n",
-      "Presolve time = 0.00 sec. (0.02 ticks)\n",
-      "Probing time = 0.00 sec. (0.00 ticks)\n",
-      "MIP emphasis: balance optimality and feasibility.\n",
-      "MIP search method: dynamic search.\n",
-      "Parallel mode: deterministic, using up to 16 threads.\n",
-      "Root relaxation solution time = 0.00 sec. (0.02 ticks)\n",
-      "\n",
-      "        Nodes                                         Cuts/\n",
-      "   Node  Left     Objective  IInf  Best Integer    Best Bound    ItCnt     Gap\n",
-      "\n",
-      "*     0+    0                         1500.0000      300.0000            80.00%\n",
-      "      0     0      501.3500     3     1500.0000      501.3500        4   66.58%\n",
-      "*     0+    0                         1400.0000      501.3500            64.19%\n",
-      "      0     0     1050.2501     1     1400.0000       Cuts: 9        8   24.98%\n",
-      "*     0+    0                         1300.0000     1050.2501            19.21%\n",
-      "*     0+    0                         1150.0000     1050.2501             8.67%\n",
-      "      0     0        cutoff           1150.0000                     10    0.00%\n",
-      "Elapsed time = 0.26 sec. (0.25 ticks, tree = 0.01 MB, solutions = 4)\n",
-      "\n",
-      "Implied bound cuts applied:  2\n",
-      "Mixed integer rounding cuts applied:  3\n",
-      "Gomory fractional cuts applied:  2\n",
-      "\n",
-      "Root node processing (before b&c):\n",
-      "  Real time             =    0.26 sec. (0.26 ticks)\n",
-      "Parallel b&c, 16 threads:\n",
-      "  Real time             =    0.00 sec. (0.00 ticks)\n",
-      "  Sync time (average)   =    0.00 sec.\n",
-      "  Wait time (average)   =    0.00 sec.\n",
-      "                          ------------\n",
-      "Total (root+branch&cut) =    0.26 sec. (0.26 ticks)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "solucao = model.solve()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "FO: 1150.0\n",
-      "i\tIt\txt\tyt\n",
-      "0\t0\t0\t0\n",
-      "1\t0\t100.0\t1.0\n",
-      "2\t0\t0\t0\n",
-      "3\t150.0\t350.0\t1.0\n",
-      "4\t100.0\t0\t0\n",
-      "5\t0\t0\t0\n",
-      "6\t0\t0\t0\n",
-      "7\t0\t100.0\t1.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Resultados:\n",
     "\n",
@@ -403,20 +270,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'./lotsizing.sol'"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model.export_as_lp(\"losizing.lp\")\n",
     "\n",
@@ -450,20 +306,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "di = [0, 100, 0, 200, 50, 100, 0, 100]\n",
     "h = 1\n",
@@ -513,41 +358,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Version identifier: 22.1.1.0 | 2022-11-28 | 9160aff4d\n",
-      "CPXPARAM_Read_DataCheck                          1\n",
-      "Legacy callback                                  LD\n",
-      "Warning: Control callbacks may disable some MIP features.\n",
-      "Lazy constraint(s) or lazy constraint/branch callback is present.\n",
-      "    Disabling dual reductions (CPX_PARAM_REDUCE) in presolve.\n",
-      "    Disabling presolve reductions that prevent crushing forms (CPX_PARAM_PREREFORM).\n",
-      "         Disabling repeat represolve because of lazy constraint/incumbent callback.\n",
-      "\n",
-      "Root node processing (before b&c):\n",
-      "  Real time             =    0.00 sec. (0.00 ticks)\n",
-      "Sequential b&c:\n",
-      "  Real time             =    0.00 sec. (0.00 ticks)\n",
-      "                          ------------\n",
-      "Total (root+branch&cut) =    0.00 sec. (0.00 ticks)\n",
-      "FO: 1150.0\n",
-      "i\tIt\txt\tyt\n",
-      "0\t0\t0\t0\n",
-      "1\t0\t100.0\t1.0\n",
-      "2\t0\t0\t0\n",
-      "3\t50.0\t250.0\t0.9999999999999999\n",
-      "4\t0\t0\t0\n",
-      "5\t99.99999999999997\t199.99999999999997\t0.9999999999999999\n",
-      "6\t99.99999999999997\t0\t0\n",
-      "7\t0\t0\t0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class MeuCallBack(ConstraintCallbackMixin, LazyConstraintCallback):\n",
     "    def __init__(self, env):\n",
@@ -582,41 +395,11 @@
     "for t in range(len(di)):\n",
     "    print(f\"{t}\\t{It[t].solution_value}\\t{xt[t].solution_value}\\t{yt[t].solution_value}\")"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Para vocês:\n",
-    "\n",
-    "Implementar dois modelos de VRP:\n",
-    "\n",
-    "* Um, sem callback, que usa o MTZ para eliminar rotas\n",
-    "\n",
-    "* O segundo que faz isso com planos de corte\n",
-    "\n",
-    "Exemplos de modelos: https://en.wikipedia.org/wiki/Travelling_salesman_problem"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Para vocês:\n",
-    "\n",
-    "Implementar dois modelos de VRP:\n",
-    "\n",
-    "* Um, sem callback, que usa o MTZ para eliminar rotas\n",
-    "\n",
-    "* O segundo que faz isso com planos de corte\n",
-    "\n",
-    "Exemplos de modelos: https://en.wikipedia.org/wiki/Travelling_salesman_problem"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -630,7 +413,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
